# cheatsheet

./: README.md
01_makefile_cpp_cu/: CMakeLists.txt  main.cpp  run.sh  say_hello.cu  say_hello.h
02_build_openvdb_nanovdb/: HOWTO.txt
03_cmake_cpp_openvdb/: CMakeLists.txt  README.md  build_script.sh  main.cpp
